完成餐馆详细信息页面基本设计 增加顶部状态栏随滑动改变透明度功能

--- a/ELeMel/View/DetailPageTitleUIView.xib
+++ b/ELeMel/View/DetailPageTitleUIView.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="oD1-bw-jXX">
+        <view contentMode="scaleToFill" id="oD1-bw-jXX" customClass="DetailPageTitleUIView" customModule="ELeMel" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -17,18 +17,27 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" title="点餐"/>
+                    <connections>
+                        <action selector="bookMealBttonPressed:" destination="oD1-bw-jXX" eventType="touchUpInside" id="cMH-JR-6K6"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="07h-A6-Etn">
                     <rect key="frame" x="100" y="4" width="41" height="36"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" title="评价"/>
+                    <connections>
+                        <action selector="commentBttonPressed:" destination="oD1-bw-jXX" eventType="touchUpInside" id="IPE-5A-fpm"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dkH-q0-2J6">
                     <rect key="frame" x="187" y="4" width="41" height="36"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" title="商家"/>
+                    <connections>
+                        <action selector="restaurantButtonPressed:" destination="oD1-bw-jXX" eventType="touchUpInside" id="hfn-ln-M5D"/>
+                    </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="4.6" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HGN-TY-NQU">
                     <rect key="frame" x="141" y="4" width="28" height="20"/>
