--- a/ELeMel/View/Views/FrontPage/ShopCart/ShopCartUIView.xib
+++ b/ELeMel/View/Views/FrontPage/ShopCart/ShopCartUIView.xib
@@ -23,6 +23,9 @@
                     <state key="normal" title="结算">
                         <color key="titleColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
+                    <connections>
+                        <action selector="createOrderButtonPressed:" destination="-1" eventType="touchUpInside" id="eiY-aD-Cm8"/>
+                    </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="另需配送费¥3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xW-iu-V6I">
                     <rect key="frame" x="118" y="32" width="159" height="17"/>
